# ocaml-xed-bindings

./: .gitignore  META  Makefile  README.md  _tags  build.sh  dune  dune-project  generate_bindings.py  generate_stubs.ml  myocamlbuild.ml  opam  release.sh  xed-build.sh  xedbindings.opam
src/: ForeignDynamic.ml  Xed.ml  XedBindings.ml  dune  test.ml  xedbindings.ml  xedbindings_stubs.c
src/bind/: .gitignore  XBEnums.ml  bind.ml  dune  function_desc.ml  generate_bindings.py  stubs.c  type_desc.ml
test/: dune  test.ml
