opam-version: "2.0"
name:         "xedbindings"
version:      "0.10"
synopsis:     "Bindings to Intel XED"
maintainer:   "Ryan Goulden"
authors:      "Ryan Goulden"
license:      "Apache-2.0"

homepage:    "https://github.com/percontation/ocaml-xed-bindings"
bug-reports: "https://github.com/percontation/ocaml-xed-bindings/issues"
dev-repo:    "git+https://github.com/percontation/ocaml-xed-bindings.git"

build: [
  ["sh" "xed-build.sh"]
  #["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "3.7"}
  "ctypes" {>= "0.12"}
  "conf-python-3" {build}
]

# dune ctypes stub generation is broken when compiling with bytecode-only?
conflicts: ["ocaml-option-bytecode-only"]
